# fia-v3.0

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEBUGGING-POPOVERS.md  Dockerfile  GIT_REFACTORING_STRATEGY.md  PRODUCTION-FIXES-SUMMARY.md  README.md  REFACTORING_PLAN.md  SPEC.md  TRAINER_DASHBOARD_IMPLEMENTATION.md  main.py  nixpacks.toml  project_health.py  pyproject.toml  railway.toml  requirements.txt  setup.py  start.sh  test-production-fixes.html  test_audio.html  test_genai_adapter.py  test_r2_config.py  test_r2_simple.py
backend/: README.md  alembic.ini  example_integration.py  pyproject.toml  pytest.ini  requirements.txt  test_chart_frontend.html  test_chart_service.py  test_chat_logging.py  test_conversation_endpoints.py  test_frontend_integration.py
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 001_initial_migration_with_file_storage.py  002_fix_trainer_password_column.py  003_add_personalized_training_structure.py  005_add_missing_profile_columns.py  006_add_plan_data_column.py  007_rename_personalized_plan_to_enriched_profile.py  008_add_slide_type_column.py  009_add_slide_generated_image.py  010_add_is_ai_generated_to_trainings.py  011_add_strategic_performance_indexes.py  012_drop_unused_tables.py  4ec93e9be28b_add_objectives_and_training_duration_to_.py  64d4179d4572_add_language_column_to_trainers.py  764f78797926_initial_migration_create_all_tables.py  8b74fa16b171_add_performance_indexes.py  b3b741b9e509_add_admin_dashboard_performance_indexes.py
backend/app/: main.py
backend/app/adapters/: __init__.py
backend/app/controllers/: integrated_plan_generation_controller.py  plan_generation_controller.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py  auth.py  database.py  dependencies.py  feature_flags.py  gemini_call_logger.py  live_api_client.py  rate_limiter.py  settings.py  user_manager.py
backend/app/schemas/: plan_schemas.py
backend/app/services/: chart_generation_service.py  conversation_prompt_builder.py  integrated_plan_generation_service.py  plan_generation_service.py  plan_generation_service_v2.py  plan_persistence_service.py  simple_plan_generation_service.py  slide_content_generator.py  slide_content_modifier.py  slide_generation_service.py  (+3 more)
backend/tests/: PLAN_GENERATION_TEST_RESULTS.md  create_test_session.py  demo_enhanced_logs.py  index_fluide_on_attend_la_fin_v2.01.html  index_fluide_on_attend_la_fin_v2.02.html  index_fluide_on_attend_la_fin_v2.03.html  simple_websocket_test.py  test-api-live.py  test-api-live_v1.0.py  test_context_cache_integration.py  test_context_cache_simple.py  test_enhanced_logging.py  test_frontend_isolation.py  test_gemini_logger.py  test_live_api_adapter.py  test_live_api_client.py  test_live_conversation_service.py  test_mock_responses.py  test_more_details_service.py  test_plan_generation_service.py  test_plan_generation_simple.py  test_plan_integration_complete.py  test_simplify_endpoint.py  test_url_fix.py  test_vertex_ai.py  test_websocket_with_db.py
docs/: SPEC.md  (+5 more)
(+238 files in other folders)
