[tool.poetry]
name = "fia-v3-backend"
version = "0.1.0"
description = "FIA v3.0 - AI-powered e-learning platform backend"
authors = ["FIA Team <team@fia.com>"]
readme = "README.md"
packages = [{include = "app", from = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
psycopg2-binary = ">=2.9.0"
asyncpg = ">=0.29.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
python-multipart = ">=0.0.6"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
fastapi-users = {extras = ["sqlalchemy"], version = ">=12.1.0"}
google-generativeai = ">=0.3.0"
python-dotenv = ">=1.0.0"
structlog = ">=23.2.0"
httpx = ">=0.25.0"
aiohttp = ">=3.9.0"
aiofiles = ">=23.0.0"
google-cloud-aiplatform = "^1.71.1"
vertexai = "^1.71.1"
websockets = ">=12.0"
openai = "^1.98.0"
google-genai = "^1.27.0"
google-cloud-texttospeech = "^2.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.7.0"
pre-commit = ">=3.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
